fix: 优化变量名

--- a/test/slide_page.html
+++ b/test/slide_page.html
@@ -95,7 +95,7 @@
     <div class="pagination-page"></div>
     <div class="next-page" onclick="slide.slideNext()">V</div>
 </nav>
-<script src="./dist/slideFullPage.dev.js"></script>
+<script src="./../dist/slideFullPage.dev.js"></script>
 <script>
     renderPagination()
     var slide = new SlideFullPage()
