--- a/test/slide_page.html
+++ b/test/slide_page.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Title-3000</title>
     <style>
         html,body {
             width: 100%;
