--- a/test/slide_page.html
+++ b/test/slide_page.html
@@ -4,17 +4,24 @@
     <meta charset="UTF-8">
     <title>Title-3000</title>
     <style>
-        html,body {
+        html, body {
             width: 100%;
             height: 100%;
             margin: 0;
         }
+
+        body {
+            transform: translate3d(0, 0, 0);
+            -webkit-transform: translate3d(0, 0, 0);
+        }
+
         #container {
             width: 100%;
             height: 100%;
             overflow: hidden;
             position: relative;
         }
+
         .section {
             position: absolute;
             top: 0;
@@ -24,21 +31,24 @@
             overflow-y: auto;
             overflow-x: hidden;
             -webkit-overflow-scrolling: touch;
-            -webkit-tap-highlight-color:rgba(255,255,255,0);
+            -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
             -webkit-text-size-adjust: none;
-            -webkit-backface-visibility:hidden;-webkit-transform-style:preserve-3d;
+            -webkit-backface-visibility: hidden;
+            -webkit-transform-style: preserve-3d;
             background-position: center;
-            transform: translate3d(0,100%,0);
-            -webkit-transform: translate3d(0,100%,0);
+            transform: translate3d(0, 100%, 0);
+            -webkit-transform: translate3d(0, 100%, 0);
             background-color: green;
         }
+
         .transition {
             transition: all 700ms cubic-bezier(0.550, 0.085, 0.000, 0.990);
             -webkit-transition: all 700ms cubic-bezier(0.550, 0.085, 0.000, 0.990);
         }
+
         .check {
-            transform: translate3d(0,0,0);
-            -webkit-transform: translate3d(0,0,0);
+            transform: translate3d(0, 0, 0);
+            -webkit-transform: translate3d(0, 0, 0);
         }
 
         .pagination {
@@ -81,14 +91,132 @@
         .pagination a.active:after {
             background: rgba(255, 255, 255, .5);
         }
+
+        .section1 {
+            background: green;
+        }
+
+        .section2 {
+            background-color: antiquewhite;
+        }
+
+        .section3 {
+            background-color: chocolate;
+        }
+
+        .section4 {
+            background-color: darkseagreen;
+        }
     </style>
 </head>
 <body>
 <div id="container">
-    <div class="section transition check">111</div>
-    <div class="section transition">222</div>
-    <div class="section transition">333</div>
-    <div class="section transition">444</div>
+    <div class="section transition section1">
+        <div>111</div>
+    </div>
+    <div class="section transition section2">
+        <div>222</div>
+    </div>
+    <div class="section transition section3">
+        <div>
+            <p>333</p>
+            <p>333</p>
+            <p>333</p>
+            <p>333</p>
+            <p>333</p>
+            <p>333</p>
+            <p>333</p>
+            <p>333</p>
+            <p>333</p>
+            <p>333</p>
+            <p>333</p>
+            <p>333</p>
+            <p>333</p>
+            <p>333</p>
+            <p>333</p>
+            <p>333</p>
+            <p>333</p>
+            <p>333</p>
+            <p>333</p>
+            <p>333</p>
+            <p>333</p>
+            <p>333</p>
+            <p>333</p>
+            <p>333</p>
+            <p>333</p>
+            <p>333</p>
+            <p>333</p>
+            <p>333</p>
+            <p>333</p>
+            <p>333</p>
+            <p>333</p>
+            <p>333</p>
+            <p>333</p>
+            <p>333</p>
+            <p>333</p>
+            <p>333</p>
+            <p>333</p>
+            <p>333</p>
+            <p>333</p>
+            <p>333</p>
+            <p>333</p>
+            <p>333</p>
+            <p>333</p>
+            <p>333</p>
+            <p>333</p>
+            <p>333</p>
+            <p>333</p>
+            <p>333</p>
+            <p>333</p>
+            <p>333</p>
+            <p>333</p>
+            <p>333</p>
+            <p>333</p>
+            <p>333</p>
+            <p>333</p>
+            <p>333</p>
+            <p>333</p>
+            <p>333</p>
+            <p>333</p>
+            <p>333</p>
+            <p>333</p>
+            <p>333</p>
+        </div>
+    </div>
+    <div class="section transition section4">
+        <div>444</div>
+    </div><!--
+
+    <div class="section transition section1">
+        <div>444</div>
+    </div>
+    <div class="section transition section2">
+        <div>444</div>
+    </div>
+    <div class="section transition section4">
+        <div>444</div>
+    </div>
+    <div class="section transition section1">
+        <div>444</div>
+    </div>
+    <div class="section transition section2">
+        <div>444</div>
+    </div>
+    <div class="section transition section4">
+        <div>444</div>
+    </div>
+    <div class="section transition section1">
+        <div>444</div>
+    </div>
+    <div class="section transition section2">
+        <div>444</div>
+    </div>
+    <div class="section transition section4">
+        <div>444</div>
+    </div>
+    <div class="section transition section1">
+        <div>444</div>
+    </div>-->
 </div>
 <nav class="pagination" id="pagination">
     <div class="prev-page" onclick="slide.slidePre()">&Lambda;</div>
@@ -105,7 +233,7 @@
         var len = document.querySelectorAll('.section').length;
         var paginationContent = ''
         // 渲染页码
-        for (var i = 0; i < len; i++) {
+        for (var i = 1; i <= len; i++) {
             paginationContent += '<a onclick="slide.setPage(' + i + ')"></a>';
         }
         pagination.querySelector('.pagination-page').innerHTML = paginationContent;
