--- a/test/slide_page.html
+++ b/test/slide_page.html
@@ -10,11 +10,6 @@
             margin: 0;
         }
 
-        body {
-            transform: translate3d(0, 0, 0);
-            -webkit-transform: translate3d(0, 0, 0);
-        }
-
         #container {
             width: 100%;
             height: 100%;
@@ -31,24 +26,17 @@
             overflow-y: auto;
             overflow-x: hidden;
             -webkit-overflow-scrolling: touch;
-            -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
-            -webkit-text-size-adjust: none;
+            -webkit-perspective: 1000;
             -webkit-backface-visibility: hidden;
-            -webkit-transform-style: preserve-3d;
-            background-position: center;
-            transform: translate3d(0, 100%, 0);
-            -webkit-transform: translate3d(0, 100%, 0);
+            transform: translate(0, 100%);
+            -webkit-transform: translate(0, 100%);
             background-color: green;
+            will-change: transform,scroll-position,contents;
         }
 
         .transition {
             transition: all 700ms cubic-bezier(0.550, 0.085, 0.000, 0.990);
             -webkit-transition: all 700ms cubic-bezier(0.550, 0.085, 0.000, 0.990);
-        }
-
-        .check {
-            transform: translate3d(0, 0, 0);
-            -webkit-transform: translate3d(0, 0, 0);
         }
 
         .pagination {
